force-app/main/default/objects/KYC_Response__c/KYC_Response__c.object-meta.xml
<CustomObject>
    <label>KYC Response</label>
    <nameField>
        <label>KYC Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>