force-app/main/default/objects/KYC_Response__c/fields/Client_Solution_Director_Approval__c.field-meta.xml
<CustomField>
    <fullName>Client_Solution_Director_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Solution Director Approval</label>
    <type>Checkbox</type>
</CustomField>