force-app/main/default/objects/KYC_Response__c/fields/Company_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Legal_Status__c</fullName>
    <label>Company Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Structure</valueSetName>
    </valueSet>
</CustomField>