force-app/main/default/objects/KYC_Response__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>