force-app/main/default/objects/KYC_Response__c/fields/Company_Tax_VAT_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Tax_VAT_GST_Number__c</fullName>
    <label>Company Tax / VAT / GST Number</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>