force-app/main/default/objects/KYC_Response__c/fields/Company_Trading_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Trading_Address__c</fullName>
    <label>Company Trading Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>