force-app/main/default/objects/KYC_Response__c/fields/Date_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Date_Reviewed__c</fullName>
    <inlineHelpText>Populated automatically when Status is changed to Approved or Rejected.</inlineHelpText>
    <label>Date Reviewed</label>
    <type>Date</type>
</CustomField>