force-app/main/default/objects/KYC_Response__c/fields/Form_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Response_Status__c</fullName>
    <label>Form Response Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Client Info</fullName>
            </value>
            <value>
                <fullName>Awaiting Partner Info</fullName>
            </value>
            <value>
                <fullName>Pending CS Review</fullName>
            </value>
            <value>
                <fullName>Pending Partner Team Review</fullName>
            </value>
            <value>
                <fullName>Pending Compliance Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>