force-app/main/default/objects/KYC_Response__c/fields/Form_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Form_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated automatically with User who updated the Status to Approved or Rejected.</inlineHelpText>
    <label>Form Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KYC_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>