force-app/main/default/objects/KYC_Response__c/fields/I_confirm_the_above_details_are_correct__c.field-meta.xml
<CustomField>
    <fullName>I_confirm_the_above_details_are_correct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I confirm the above details are correct.</label>
    <type>Checkbox</type>
</CustomField>