force-app/main/default/objects/KYC_Response__c/fields/KYC_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>KYC_Form_URL__c</fullName>
    <formula>HYPERLINK( $Setup.KYC_Form_Settings__c.Form_URL__c + Id, &quot;Click here to open the form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Form URL</label>
    <type>Text</type>
</CustomField>