force-app/main/default/objects/KYC_Response__c/fields/Name_of_Ultimate_Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Ultimate_Parent_Company__c</fullName>
    <label>Name of Ultimate Parent Company</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>