force-app/main/default/objects/KYC_Response__c/fields/Organisation_Locations__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Locations__c</fullName>
    <label>Organisation Location(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>