force-app/main/default/objects/KYC_Response__c/fields/Partner_Team_Director_Approval__c.field-meta.xml
<CustomField>
    <fullName>Partner_Team_Director_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Team Director Approval</label>
    <type>Checkbox</type>
</CustomField>