force-app/main/default/objects/KYC_Response__c/fields/Registered_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Name__c</fullName>
    <inlineHelpText>Registered Company / Partnership/ Organisation Name</inlineHelpText>
    <label>Registered Company / Partnership Name</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>