force-app/main/default/objects/KYC_Response__c/fields/Registered_Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address__c</fullName>
    <label>Registered Office Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>