force-app/main/default/objects/KYC_Response__c/fields/Regulatory_Bodies__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Bodies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Bodies?</label>
    <type>Checkbox</type>
</CustomField>