force-app/main/default/objects/KYC_Response__c/fields/Regulatory_Bodies_Details__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Bodies_Details__c</fullName>
    <label>Regulatory Bodies Details</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>