force-app/main/default/objects/KYC_Response__c/fields/Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Sent_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sent To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYC Responses</relationshipLabel>
    <relationshipName>KYC_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>