force-app/main/default/objects/KYC_Response__c/recordTypes/Client_Form.recordType-meta.xml
<RecordType>
    <fullName>Client_Form</fullName>
    <active>true</active>
    <label>Client Form</label>
</RecordType>