force-app/main/default/objects/KYC_Response__c/recordTypes/Partner_Affiliate_Form.recordType-meta.xml
<RecordType>
    <fullName>Partner_Affiliate_Form</fullName>
    <active>true</active>
    <label>Partner/Affiliate Form</label>
</RecordType>